--- a/asset/Main.css
+++ b/asset/Main.css
@@ -1,1 +1,23 @@
+body {
+    margin: 0;
+    padding: 0;
+}
 
+.container {
+    align-items: center;
+    background: #222;
+    display: flex;
+    height: 100vh;
+    width: 100%;
+    justify-content: center;
+}
+
+#timer {
+    color: #fff;
+    font-size: 4rem;
+}
+
+.label {
+    font-size: 2.5rem;
+    padding-left: .25rem;
+}
