--- a/asset/Main.css
+++ b/asset/Main.css
@@ -12,6 +12,16 @@ body {
     justify-content: center;
 }
 
+/* ids */
+#questions {
+    display: none;
+}
+
+#startQuiz {
+    background-color: green;
+    padding: 4px;
+}
+
 #timer {
     color: #fff;
     font-size: 4rem;
@@ -20,4 +30,8 @@ body {
 .label {
     font-size: 2.5rem;
     padding-left: .25rem;
+}
+
+.b-rad-4 {
+    border-radius: 4px;
 }
